--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,7 @@ a:hover {
     color: darkmagenta;
 }
 
-.drapeau img{
-    width: 200px;
-    height: 200px;
+.drapeau img
+{ width: 200px; 
+ height: 200px;
 }
-
