--- a/css/main.css
+++ b/css/main.css
@@ -45,13 +45,20 @@ header nav ul li {
 }
 @font-face {
     font-family: 'Kanit';
-    src: url('fonts/Kanit-Black.ttf') format('truetype');
+    src: url('../fonts/Kanit-Black.ttf') format('truetype');
     font-weight: normal; 
     font-style: normal; 
 }
 
 body {
   font-family: 'Kanit', sans-serif;
+}
+
+body {
+  background-image: url('../img/background.jpg');
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
 }
 
 nav a {
