--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,10 @@ header nav ul {
 header nav ul li {
   margin: 0 20px;
 }
+
 @font-face {
     font-family: 'Kanit';
-    src: url('../fonts/Kanit-Black.ttf') format('truetype');
+    src: url('/fonts/Kanit-Black.ttf') format('truetype');
     font-weight: normal; 
     font-style: normal; 
 }
@@ -55,7 +56,7 @@ body {
 }
 
 body {
-  background-image: url('../img/background.jpg');
+  background-image: url('/img/background.jpg');
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
