--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ header nav ul li {
 
 @font-face {
     font-family: 'Kanit';
-    src: url('/fonts/Kanit-Black.ttf') format('truetype');
+    src: url('fonts/Kanit-Black.ttf') format('truetype');
     font-weight: normal; 
     font-style: normal; 
 }
@@ -56,7 +56,7 @@ body {
 }
 
 body {
-  background-image: url('/img/background.jpg');
+  background-image: url('img/background.jpg');
   background-size: cover; 
   background-position: center; 
 }
