--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ h1 {
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
 }
 
-/* Ajouter une largeur maximale à la page */
+
 main {
   max-width: 900px;
   margin: 20px auto;
@@ -92,11 +92,16 @@ main {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* Centrer horizontalement le contenu de la page */
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0;
   padding: 0;
+}
+
+drapeau {
+  width: 250px;
+  height: 250px;
+  
 }
