--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ body {
 
 nav a {
   text-decoration: none;
-  color: #ffffff;
+  color: #C6A1CF;
   transition: color 0.3s, text-shadow 0.3s;
 }
 
