--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,64 @@
+
+body {
+  font-family: 'Kanit', sans-serif;
+  background-image: url('img/background.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('fonts/Kanit-Black.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+header {
+  padding: 30px;
+  background-color: #00796b;
+  color: #ffffff;
+  text-align: center;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+header nav ul li {
+  margin: 0 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #6a1b9a;
+  transition: color 0.3s, text-shadow 0.3s;
+}
+
+nav a:hover {
+  color: #ffd600;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+
+main {
+  max-width: 900px;
+  margin: 20px auto;
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+
 h1 {
   color: #1a73e8;
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
@@ -5,7 +66,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  color: #d32f2f; 
+  color: #d32f2f;
   border-left: 5px solid #0f9d58;
   padding-left: 10px;
 }
@@ -18,72 +79,18 @@ p {
 ul li {
   font-size: 16px;
   line-height: 1.5;
-  color: #455a64; 
+  color: #455a64;
 }
 
-header {
-  padding: 30px;
-  background-color: #00796b; 
-  color: #ffffff;
-  text-align: center;
-}
 
 footer {
   margin-top: 30px;
   padding: 15px;
-  background-color: #37474f; 
-  color: #f5f5f5; 
+  background-color: #37474f;
+  color: #f5f5f5;
   text-align: center;
 }
 
-header nav ul {
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
-  padding: 0;
-}
-
-header nav ul li {
-  margin: 0 20px;
-}
-
-@font-face {
-  font-family: 'Kanit';
-  src: url('fonts/Kanit-Black.ttf') format('truetype');
-  font-weight: normal; 
-  font-style: normal; 
-}
-
-body {
-  font-family: 'Kanit', sans-serif;
-  background-image: url('img/background.jpg');
-  background-size: cover; 
-  background-position: center; 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-nav a {
-  text-decoration: none;
-  color: #9c27b0; 
-  transition: color 0.3s, text-shadow 0.3s;
-}
-
-nav a:hover {
-  color: #ffeb3b; 
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-main {
-  max-width: 900px;
-  margin: 20px auto;
-  background-color: rgba(255, 255, 255, 0.95);
-  padding: 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); 
-}
 
 .drapeau {
   width: 250px;
