--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ ul li {
 footer {
   margin-top: 30px;
   padding: 15px;
-  background-color: #1b1b1b; 
+  background-color: #ADD8E6; 
   color: #f5f5f5;
   text-align: center;
 }
