--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ footer {
   margin-top: 30px;
   padding: 15px;
   background-color: #ADD8E6; 
-  color: #f5f5f5;
+  color: #ADD8E6;
   text-align: center;
 }
 
