--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
 
 header {
   padding: 30px;
-  background-color: #004d40; 
+  background-color: #90EE90; 
   color: #ffffff; 
   text-align: center;
 }
