--- a/css/main.css
+++ b/css/main.css
@@ -88,12 +88,10 @@ ul li {
 footer {
   margin-top: 30px;
   padding: 15px;
-  background-color: #ADD8E6; 
-  color: #000000;  
+  background-color: #ADD8E6;
+  color: #FFFFFF;  
   text-align: center;
 }
-
-
 
 
 .drapeau img {
