--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,11 @@ ul li {
 footer {
   margin-top: 30px;
   padding: 15px;
-  background-color: #ADD8E6;
+  background-color: #00008B;
   color: #FFFFFF;  
   text-align: center;
 }
+
 
 .drapeau { 
   text-align: center;
