--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ footer {
   margin-top: 30px;
   padding: 15px;
   background-color: #00008B;
-  color: #FFFFFF;  
+  color: #000000;  
   text-align: center;
 }
 
