--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ ul li {
 footer {
   margin-top: 30px;
   padding: 15px;
-  background-color: #00008B;
+  background-color: #ADD8E6;
   color: #000000;  
   text-align: center;
 }
